[package]
name = "qwesty"
authors = ["iaMJ <kiyomi@mjba.my>"]
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
toml = "0.9"
once_cell = "1.19"
rand = "0.9.2"
axum = "0.7"
